--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Holamundo</string>
+    <string name="titulo">App para Saludar</string>
+    <string name="Saludar">Saludar</string>
 </resources>
