--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Holamundo</string>
     <string name="titulo">App para Saludar</string>
     <string name="Saludar">Saludar</string>
+    <string name="parte_saludo">Hola</string>
 </resources>
